update html, js
update html, js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-
+  <div class="grid-con">
+    <section class="col-span-full m-col-span-6">
+      <!-- movie list -->
+    </section>
+  </div>
 </body>
 
 </html>
