--- a/index.html
+++ b/index.html
@@ -10,15 +10,49 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <script defer src="js/main.js"></script>
 </head>
 
 <body>
-  <div class="grid-con">
-    <section class="col-span-full m-col-span-6">
-      <!-- movie list -->
+  <header id="main-header">
+    <div class="grid-con">
+      <div class="col-span-full">
+        <h1>Star Wars Ultimate Guide</h1>
+      </div>
+    </div>
+  </header>
+
+  <main class="grid-con">
+    <div id="loader" class="col-span-full hidden">
+      <p>Loading laser guns...</p>
+    </div>
+
+    <section id="character-section" class="col-span-full m-col-span-4">
+      <h2>Characters</h2>
+      <ul id="character-list">
+      </ul>
     </section>
-  </div>
+
+    <section id="movie-details" class="col-span-full m-col-span-8">
+      <p class="placeholder">Select a character to see their movie info.</p>
+    </section>
+  </main>
+
+  <footer id="main-footer">
+    <div class="grid-con">
+      <div class="col-span-full">
+        <p>&copy; 2026 Star Wars Fan Project</p>
+      </div>
+    </div>
+  </footer>
+
+  <template id="char-template">
+    <li class="character-item">
+      <a href="#" class="char-link" data-url=""></a>
+    </li>
+  </template>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
