update js, html,
update js, html,

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <footer id="main-footer">
     <div class="grid-con">
       <div class="col-span-full">
-        <p>&copy; 2026 Star Wars Fan Project</p>
+        <p>&copy; 2026 Star Wars Movie Guide</p>
       </div>
     </div>
   </footer>
